# k2-md1

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE
data/newclstuff/: fuse.cl
data/shadertest/shaders/: fragment.fsh  geometry.gsh  vertex.vsh
include/cl/: cldvo.hpp
include/fusion/: fusion.hpp
include/newclstuff/: clinit.hpp
include/reconstruct/: dataio.hpp  trackball.hpp
src/: CMakeLists.txt  CMakeLists.txt~  firstkinect.cpp  main.cpp  pointcloud.cpp  rendersync.cpp  run.py  syncdepth.cpp  wrapper.hpp  wrappertest.cpp
src/cl/: CMakeLists.txt  CMakeLists.txt~  cldvo.hpp  clinit.hpp  dvo.cl  livedvocl.cpp  myregister.hpp  runcl.py  testdvocl.cpp  testdvoheader.cpp  trackpoints.cpp  visualizer.hpp
src/context/: freenect_types.cpp  freenect_types.h
src/fusion/: main.cpp  raycast.hpp  scale_tsdf.hpp
src/general/: fileio.h
src/graphics/: glcontext.cpp  glcontext.h  glfw_types.cpp  glfw_types.h
src/newclstuff/: clcolor.cpp  clfuse.cpp  dualdvo.hpp  fuse.cl  loading.hpp  windowdvo.cpp  windowdvo2.cpp
src/reconstruct/: CMakeLists.txt  dataio.hpp  points.cpp  record.cpp
src/tracker/: dvo.cpp  livedvo.cpp  testdvo.cpp
